--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.thealphareturns'
@@ -12,14 +13,22 @@ repositories {
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'org.json:json:20220320'
+    implementation 'com.baulsupp.kolja:jcurses:0.9.5.3'
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 jar {
     manifest {
-        attributes "Main-Class": "com.thealphareturns.chessai.ChessAI"
+        attributes "Main-Class": 'com.thealphareturns.chessai.ChessAI'
     }
 
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+}
+
+application {
+    mainClass.set('com.thealphareturns.chessai.ChessAI')
 }
