--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ncurses = { version = "5.101.0", features = ["wide"] }
+crossterm = "0.25.0"
+tui = "0.19.0"
