--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 crossterm = "0.25.0"
 events_emitter = "0.1.3"
 intuitive = {version = "0.6.2", features = ["experimental"]}
+pleco = "0.5.0"
+rustneat = "0.2.1"
