--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.69"
 crossterm = "0.25.0"
 events_emitter = "0.1.3"
 intuitive = {version = "0.6.2", features = ["experimental"]}
