--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,17 +6,23 @@ COPY . .
 
 RUN apt-get update
 RUN apt-get install -y \
-  curl \
-  git \
-  gnupg2 \
-  jq \
-  sudo \
-  zsh \
-  vim \
-  build-essential \
-  openssl
+	curl \
+	git \
+	gnupg2 \
+	jq \
+	sudo \
+	zsh \
+	vim \
+	build-essential \
+	openssl
+
 
 RUN useradd -m -s /bin/zsh github
+
+# add to sudoers
+RUN echo "github ALL=(ALL) NOPASSWD:ALL" | EDITOR="tee -a" visudo
+
 USER github
+
 
 RUN bash ./setup.sh
