--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ crossterm = "0.25.0"
 events_emitter = "0.1.3"
 intuitive = {version = "0.6.2", features = ["experimental"]}
 pleco = "0.5.0"
+regex = "1.7.1"
 rustneat = "0.2.1"
