--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 crossterm = "0.25.0"
-events_emitter = "0.1.3"
+futures = "0.3.27"
 intuitive = {version = "0.6.2", features = ["experimental"]}
-pleco = "0.5.0"
-regex = "1.7.1"
+reqwest = { version = "0.11.16", features = ["blocking"] }
 rustneat = "0.2.1"
+zip = "0.6.4"
