--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 anyhow = "1.0.69"
 crossterm = "0.25.0"
 intuitive = {version = "0.6.2", features = ["experimental"]}
+rand = "0.8.5"
 rustneat = "0.2.1"
