--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.69"
+clap = { version = "4.2.1", features = ["derive"] }
 crossterm = "0.25.0"
 intuitive = {version = "0.6.2", features = ["experimental"]}
 rand = "0.8.5"
-rustneat = "0.2.1"
+syn = "2.0.13"
