--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.69"
+bincode = "1.3.3"
 clap = { version = "4.2.1", features = ["derive"] }
 crossterm = "0.25.0"
 intuitive = {version = "0.6.2", features = ["experimental"]}
 rand = "0.8.5"
+serde = { version = "1.0.160", features = ["derive"] }
+serialport = { version = "4.2.0", features = ["serde"] }
 syn = "2.0.13"
+uuid = { version = "1.3.1", features = ["v8", "v4"] }
 
 [[bin]]
 name = "chess-ai"
