--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chess-ai"
+name = "chess"
 version = "0.2.0"
 edition = "2021"
 
@@ -9,6 +9,7 @@ bincode = "1.3.3"
 clap = { version = "4.2.1", features = ["derive"] }
 crossterm = "0.25.0"
 intuitive = {version = "0.6.2", features = ["experimental"]}
+promptly = "0.3.1"
 rand = "0.8.5"
 serde = { version = "1.0.160", features = ["derive"] }
 serialport = { version = "4.2.0", features = ["serde"] }
@@ -16,5 +17,5 @@ syn = "2.0.13"
 uuid = { version = "1.3.1", features = ["v8", "v4"] }
 
 [[bin]]
-name = "chess-ai"
+name = "chess"
 path = "src/main.rs"
