--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chess"
+name = "chess-tui"
 version = "0.2.0"
 edition = "2021"
 
@@ -17,5 +17,5 @@ syn = "2.0.13"
 uuid = { version = "1.3.1", features = ["v8", "v4"] }
 
 [[bin]]
-name = "chess"
+name = "chess-tui"
 path = "src/main.rs"
