--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+eframe = "0.24.1"
+egui_extras = { version = "0.24.2", features = ["file", "image"] }
+itertools = "0.12.0"
 rayon = "1.8.0"
 
 [features]
