--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 eframe = "0.24.1"
-egui_extras = { version = "0.24.2", features = ["file", "image"] }
+egui_extras = { version = "0.24.2", features = ["file", "svg"] }
 itertools = "0.12.0"
 rayon = "1.8.0"
 
